--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -18,4 +18,5 @@ jobs:
       - name: Promote deployment
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-        run: vercel promote ${{ inputs.deployment_url }} --token $VERCEL_TOKEN
+          VERCEL_TEAM: ${{ secrets.VERCEL_TEAM }}
+        run: vercel promote ${{ inputs.deployment_url }} --scope $VERCEL_TEAM --token $VERCEL_TOKEN
